for few datastructure fix and system design